# sane.gesis.python

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: tests.yml
src/sane_gesis/: __init__.py  cli.py  portable_repo.py
tests/: test_portable_repo.py
